--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,4 +71,6 @@
   .grid-2{grid-template-columns:repeat(2,minmax(0,1fr))}
   .grid-3{grid-template-columns:repeat(3,minmax(0,1fr))}
   @media (max-width: 900px){.grid-2,.grid-3{grid-template-columns:1fr}}
+  .fluid-img{max-width:100%;height:auto;display:block}
+  .visually-hidden{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
 }
